--- a/app/views/staticpages/graduate_jobs.haml
+++ b/app/views/staticpages/graduate_jobs.haml
@@ -17,4 +17,4 @@
 							.pull-right
 								=job.show_due_date
 								&nbsp &nbsp 
-								=link_to "Follow", new_user_registration_path, :class => "follow-button"
+								=link_to "Follow Job", new_user_registration_path, :class => "follow-button"
