--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,9 @@
 	</head>
 	
 	<body>
-		<!-- Hi! Hope ResumeQuery's helped you! Drop us an email with any questions: pasha.rayan@gmail.com. Best of luck! -->
-		<!-- Go NEWSOUTH! -->			
+		<!-- Hi! Thanks for looking under the hood! -->
+		<!-- Our goal with resumeQuery is to help give students the opportunities that me (Pasha) and Varun had when we applied for jobs -->
+		<!-- We'd love your help and suggestions! Email us at team@resquery.com  -->		
 		<% if signed_in? %>
 			<%= render 'layouts/header'%>
 			<div class="container">
