--- a/app/views/staticpages/home.haml
+++ b/app/views/staticpages/home.haml
@@ -15,7 +15,7 @@
 		.dashboard
 		
 		%h4(class="applist-area orange-text")
-			Jobs & Internships
+			Jobs & Internships List
 		-@jobs.each do |job|
 			=link_to job do 
 				.appManage
