--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -861,6 +861,7 @@ h3 {
 	padding:2px 10px;
 	background-color: $light-green;
 	border-top:4px solid $base-green;
+	border-bottom:1px dotted $base-green;
 }
 
 .wiki-info{
