--- a/app/views/jobs/show.haml
+++ b/app/views/jobs/show.haml
@@ -37,4 +37,19 @@
 				= @job.find_company.name
 				= @job.name
 		.wiki-info
-			Hellox
+			-if @job.wiki == nil
+				Add your insights to this wiki - edit this wiki
+
+			-else
+				=simple_format(@job.wiki)
+			.pad-top
+				%br
+				-if signed_in?
+					=link_to "Edit Wiki", edit_job_path(@job), :class => "sign-up-button"
+				-else
+					=link_to "Edit Job", new_user_registration_path, :class => "sign-up-button"
+
+		.wiki-title
+			%h6 Link to Whirlpool forum
+		.wiki-info
+			Hello
