--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title><%= full_title(yield(:title)) %></title>  
-
+	  <title><%= full_title(yield(:title)) %></title>  
 	  <%= stylesheet_link_tag    "application", :media => "all" %>
 	  <%= javascript_include_tag "application" %>
 	  <%= csrf_meta_tags %>
 	  <%= favicon_link_tag 'favicon.ico' %>
 	  <link href='http://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
-
  	  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
-
-
-
-
-
+      <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 	</head>
 	
 	<body>
-		<!-- Hi! Thanks for looking under the hood! -->
+		<!-- Hi! Hope you enjoy looking under the hood! -->
 		<!-- Our goal with resumeQuery is to help give students the opportunities that me (Pasha) and Varun had when we applied for jobs -->
 		<!-- We'd love your help and suggestions! Email us at team@resquery.com  -->		
 		<% if signed_in? %>
@@ -32,13 +25,9 @@
 			<div class="container">
 				<%= yield %>	
 			</div>
-
-
 		<% end %>
-		<%=render 'layouts/footer'%>
-		<%=render 'shared/google_analytics' if Rails.env.production? %>
+		<%= render 'layouts/footer'%>
+		<%= render 'shared/google_analytics' if Rails.env.production? %>
 		<%= render 'layouts/uservoice' %>
-		
-		
 	</body>
 </html>
