--- a/app/views/jobs/edit.haml
+++ b/app/views/jobs/edit.haml
@@ -31,7 +31,7 @@
 			.wiki-info
 				=form_for @job, :as => :jobs do |w|
 					= render 'layouts/textarea-settings'
-					=w.text_area :wiki, :placeholder =>"Add your information to this job listing...", :class =>"focus_", :id => "wysihtml5-textarea"
+					=w.text_area :wiki, :placeholder =>"Add your information to this job listing...", :id => "wysihtml5-textarea"
 					=w.submit "Update Wiki", :class=>"sign-up-button"
 
 					
