--- a/app/views/jobs/show.haml
+++ b/app/views/jobs/show.haml
@@ -38,7 +38,7 @@
 				= @job.name
 		.wiki-info
 			-if @job.wiki == nil
-				Add your insights to this wiki - edit this wiki
+				No one's added information about this job yet - add your insights here
 
 			-else
 				=simple_format(@job.wiki)
