added whirlpool forum

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -872,6 +872,7 @@ h3 {
 	padding:20px 14px;	
 	background-color:$fade-green;
 	textarea{
+		font-family: 'Oxygen', sans-serif !important;
 		border:0px;
 		background-color:$fade-green;
 		outline: none;
