--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -717,6 +717,7 @@ h3 {
 }
 
 .info-box-light-teal{
+	width:200px;
 	border:0px !important;
 	border-radius: 4px;
 	background-color:$light-teal;
@@ -738,6 +739,7 @@ h3 {
 }
 
 .info-box-light-orange{
+		width:200px;
 	border-radius: 4px;
 	background-color:#FCE9D5;
 	padding:10px;
